--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,12 @@ dependencies:
   google_sign_in: ^6.2.2
   flutter_signin_button: ^2.0.0
   flutter_facebook_auth: ^7.1.1
+  cached_network_image: ^3.4.1
+  full_screen_image: ^2.0.0
+  flutter_cache_manager: ^3.4.1
+  flutter_spinkit: ^5.2.1
+  dropdown_button2: ^2.3.9
+#  font_awesome_flutter: ^9.2.0
 
 dev_dependencies:
   flutter_test:
