--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,10 @@ dependencies:
   firebase_storage: ^12.3.4
   firebase_messaging: ^15.1.3
 
+  # location packages
+  geoflutterfire_plus: ^0.0.32
+  geolocator: ^13.0.2
+
 
   # misc packages
   flutter_native_splash: ^2.4.3
