--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   flutter_cache_manager: ^3.4.1
   flutter_spinkit: ^5.2.1
   dropdown_button2: ^2.3.9
+  flutter_phoenix: ^1.1.1
 #  font_awesome_flutter: ^9.2.0
 
 dev_dependencies:
