--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
 
-  flutter_svg: ^2.0.14
+  # state management & DI packages
   flutter_bloc: ^8.1.6
   dartz: 0.10.1
   get_it: 8.0.2
@@ -53,21 +53,29 @@ dependencies:
   geoflutterfire_plus: ^0.0.32
   geolocator: ^13.0.2
 
+  # sign in packages
+  google_sign_in: ^6.2.2
+  flutter_signin_button: ^2.0.0
+  flutter_facebook_auth: ^7.1.1
+
+  # network packages
+  connectivity_plus: ^6.1.0
+  cached_network_image: ^3.4.1
+  flutter_cache_manager: ^3.4.1
+
+  # local storage packages
+  shared_preferences: ^2.5.1
 
   # misc packages
   flutter_native_splash: ^2.4.3
   easy_localization: ^3.0.7
   email_validator: ^3.0.0
-  connectivity_plus: ^6.1.0
-  google_sign_in: ^6.2.2
-  flutter_signin_button: ^2.0.0
-  flutter_facebook_auth: ^7.1.1
-  cached_network_image: ^3.4.1
   full_screen_image: ^2.0.0
-  flutter_cache_manager: ^3.4.1
   flutter_spinkit: ^5.2.1
   dropdown_button2: ^2.3.9
   flutter_phoenix: ^1.1.1
+  package_info_plus: ^8.2.0
+  flutter_svg: ^2.0.14
 #  font_awesome_flutter: ^9.2.0
 
 dev_dependencies:
