--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,10 @@ dependencies:
   flutter_signin_button: ^2.0.0
   flutter_facebook_auth: ^7.1.1
 
+  # vido playback packages
+  chewie: ^1.10.0
+  video_player: ^2.9.2
+
   # network packages
   connectivity_plus: ^6.1.0
   cached_network_image: ^3.4.1
