--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,9 +58,14 @@ dependencies:
   flutter_signin_button: ^2.0.0
   flutter_facebook_auth: ^7.1.1
 
-  # vido playback packages
+  # video playback packages
   chewie: ^1.10.0
   video_player: ^2.9.2
+
+  # loading packages
+  shimmer: ^3.0.0
+  flutter_native_splash: ^2.4.3
+  flutter_spinkit: ^5.2.1
 
   # network packages
   connectivity_plus: ^6.1.0
@@ -74,11 +79,11 @@ dependencies:
   shared_preferences: ^2.5.1
 
   # misc packages
-  flutter_native_splash: ^2.4.3
+
   easy_localization: ^3.0.7
   email_validator: ^3.0.0
   full_screen_image: ^2.0.0
-  flutter_spinkit: ^5.2.1
+
   dropdown_button2: ^2.3.9
   flutter_phoenix: ^1.1.1
   package_info_plus: ^8.2.0
