--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,7 +83,7 @@ dependencies:
   easy_localization: ^3.0.7
   email_validator: ^3.0.0
   full_screen_image: ^2.0.0
-
+  visibility_detector: ^0.4.0+2
   dropdown_button2: ^2.3.9
   flutter_phoenix: ^1.1.1
   package_info_plus: ^8.2.0
