Added sign up screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -89,6 +89,7 @@ dependencies:
   flutter_svg: ^2.0.14
   marquee: ^2.3.0
   upgrader: ^11.3.1
+  uuid: ^4.5.1
 #  font_awesome_flutter: ^9.2.0
 
 dev_dependencies:
