--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,9 +67,11 @@ dependencies:
   flutter_native_splash: ^2.4.3
   flutter_spinkit: ^5.2.1
 
+  # media packages
+  image_picker: ^1.1.2
+
   # network packages
   connectivity_plus: ^6.1.0
-
 
   # cache packages
   cached_network_image: ^3.4.1
@@ -91,6 +93,7 @@ dependencies:
   upgrader: ^11.3.1
   uuid: ^4.5.1
   uni_links5: ^0.5.4
+  image_cropper: ^9.0.0
 #  font_awesome_flutter: ^9.2.0
 
 dev_dependencies:
