--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -94,6 +94,8 @@ dependencies:
   uuid: ^4.5.1
   uni_links5: ^0.5.4
   image_cropper: ^9.0.0
+  dropdown_search: ^6.0.2
+  currency_picker: ^2.0.21
 #  font_awesome_flutter: ^9.2.0
 
 dev_dependencies:
